--- a/package.json
+++ b/package.json
@@ -3,36 +3,31 @@
   "version": "1.0.0",
   "private": true,
   "description": "Aprameya",
-  "keywords": [
-    "gatsby"
-  ],
+  "keywords": [],
   "scripts": {
-    "develop": "gatsby develop",
-    "start": "gatsby develop",
-    "build": "gatsby build",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "develop": "./copyassets.sh && parcel src/index.html",
+    "start": "parcel src/index.html",
+    "build": "parcel build src/index.html",
+    "serve": "parcel serve src/index.html",
+    "clean": "parcel clean"
   },
   "dependencies": {
+    "@babel/core": "^7.12.3",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@types/react": "^17.0.19",
     "babel-plugin-styled-components": "^1.13.2",
     "directory-named-webpack-plugin": "^4.0.1",
-    "gatsby": "^3.10.2",
-    "gatsby-plugin-google-analytics": "^3.10.0",
-    "gatsby-plugin-image": "^1.10.1",
-    "gatsby-plugin-mdx": "^2.10.1",
-    "gatsby-plugin-react-helmet": "^4.10.0",
-    "gatsby-plugin-sharp": "^3.10.2",
-    "gatsby-plugin-styled-components": "^4.10.0",
-    "gatsby-source-filesystem": "^3.10.0",
-    "gatsby-transformer-json": "^3.12.0",
-    "gatsby-transformer-remark": "^4.7.0",
-    "gatsby-transformer-sharp": "^3.10.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "parcel-bundler": "^1.12.5",
+    "react": ">=17",
+    "react-dom": "^16.9.0 || ^17.0.0",
     "react-helmet": "^6.1.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-spring": "^9.2.4",
     "styled-components": "^5.3.0"
+  },
+  "devDependencies": {
+    "typescript": "^4.3.5"
   }
 }
